Removed max-height to fix issue #37901 (#91)
The under-header-content has a max-height of 450px that makes the tags overflow and not responsive in mobile view

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -121,7 +121,6 @@ body {
     align-items: center;
     padding: 80px 10px 30px 10px;
     min-height: 200px;
-    max-height: 450px;
     text-align: center;
     color: white;
 }
